Added a VS Code task for testing all packages.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,6 +8,12 @@
             "problemMatcher": [
                 "$go"
             ]
+        },
+        {
+            "label": "Test all packages",
+            "type": "shell",
+            "group": "test",
+            "command": "go test ./..."
         }
     ]
 }
